src/main/java/com/example/timelist/error/LectureNotFoundException.java
package com.example.timelist.error;

public class LectureNotFoundException extends RuntimeException {
    public LectureNotFoundException (String message) {
        super ( message );
    }
}
